ログイン状態の出品者のみ、編集・削除ボタン表示

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,18 +23,22 @@
       </span>
     </div>
 
-    <%# ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
-
+    <%# ログインしているユーザーと出品しているユーザーで条件分岐する処理 %>
+    <% if user_signed_in? %> <%# ログインしているか確認 %>
+      <% if current_user.id == @item.user.id %> <%# 出品しているユーザーか確認 %>
     <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
-
+      
+      <%# ← 商品購入機能実装後 改めて条件分岐 elsif '商品が出品中かどうか' %>
+    
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
-
-
-    <%# //ログインしているユーザーと出品しているユーザーが、同一人物の場合と同一人物ではない場合で、処理を分けましょう %>
+      
+      <% end %>
+    <% end %>
+    <%# //ログインしているユーザーと出品しているユーザーで条件分岐する処理 %>
 
     <div class="item-explain-box">
       <span><%= @item.item_description %></span>
