商品の価格が表示できるように修正

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,11 +16,11 @@
       </div>
       <%# end %>
       <%# //商品が売れている場合は、sold outを表示しましょう %>
-      
+
     </div>
     <div class="item-price-box">
       <span class="item-price">
-        ¥ 999,999,999
+        <%= @item.price %>
       </span>
       <span class="item-postage">
         <%= @item.postage.name %>
