--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -110,9 +110,9 @@
       後ろの商品 ＞
     </a>
   </div>
-  <%# 詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
+  <%# 詳細ページで表示されている商品のカテゴリー名を表示 %>
   <a href="#" class="another-item"><%= @item.category.name %>をもっと見る</a>
-  <%# //詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
+  <%# //詳細ページで表示されている商品のカテゴリー名を表示 %>
 </div>
 
 <%= render "shared/footer" %>
