削除ボタンを実装

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -32,7 +32,7 @@
       <% if current_user.id == @item.user.id %> <%# 出品しているユーザーか確認 %>
     <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
-    <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
+    <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
       
       <% else %> <%# ← 商品購入機能実装後 改めて条件分岐 elsif '商品が出品中かどうか' %>
     
